Fix button text-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ height: 100vh;
 background-image: url(./../images/beachshowcase.jpg);
 background-size: cover;
 background-position: bottom right;
-
 text-align: center;
 font-size: 20px;
 }
@@ -34,9 +33,14 @@ section>p{
   text-transform: capitalize;
    }
 .button{
+   box-sizing:border-box;
+  display: inline-block;  
+  min-width: 80px;
+  width: 100%;
+  max-width: 150px;
   padding: 10px 20px;
   border: 1px solid var(--font-color);
-  border-radius: 10px;
+  border-radius: 10px;  
   color: var(--font-color);
   font-size: 0.9em;
   text-transform: capitalize;
